--- a/README.textile
+++ b/README.textile
@@ -1,12 +1,12 @@
-h1. Grid Coordinates - Compass Plugin
+h1. Grid Coordinates - Compass Extension
 
-Grid Coordinates is Simple. Grid Coordinates is just a grid. It also supports nested grids and is also able to generate the CSS for a multitude of grid coordinates.
+Grid Coordinates is a Compass extension. It's simple. It's just a grid that supports nested grids and is also able to generate the CSS for a multitude of grid coordinates.
 
 The default grid setup is 960px wide, 12 columns at 60px each with a 20px gutter. Feel free to mix it up with something like -- 960 / 16 / 40 / 20, or 800 / 10 / 60 / 20.
 
 Just update the 4 variables to change the coordinates of your grid. Use 1kbgrid.com as a guide to the grid's coordinate options.
 
-Grid Coordinates is a "Compass":http://compass-style.org/ plugin based on Tyler Tate's 1kb CSS Grid project.
+Grid Coordinates is a "Compass":http://compass-style.org/ extension based on Tyler Tate's 1kb CSS Grid project.
 
 h2. Installation
 
@@ -17,7 +17,7 @@ sudo gem sources -a http://gemcutter.org/
 
 Next, let's install Grid Coordinates and Compass
 
-bc. sudo gem install compass-grid-coordinates-plugin
+bc. sudo gem install grid-coordinates
 
 Compass should get installed with Grid Coordinates because it's set as a dependency. If for some reason it didn't, you will need to manually install it.
 
@@ -55,6 +55,12 @@ h2. Note on patches and pull requests
    bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
-h2. Copyright
+h2. License
 
-Copyright (c) 2009 Adam Stacoviak. See LICENSE for details.
+Copyright (c) 2009 Adam Stacoviak
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
